# mn_payments

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONFIGURATION.md  INSTALLATION.md  PAYMENTS_APP_INTEGRATION.md  PYTHON_COMPATIBILITY.md  QPAY_COMPATIBILITY.md  README.md  SETUP_INSTRUCTIONS.md  USAGE_GUIDE.md  pyproject.toml  pytest.ini  requirements-dev.txt  run_tests.py  run_tests_final.py  run_tests_new.py  setup.py  simple_test_runner.py
.github/workflows/: ci.yml
docs/: BATTLE_TEST_RESULTS.md  DEPLOYMENT_CHECKLIST.md  FLOW_COMPARISON.md  HYBRID_APPROACH.md  INDEPENDENCE_VERIFICATION.md  INTEGRATION_EXAMPLE.md  MIGRATION_COMPLETE.md  PYTHON_SDK_MIGRATION.md  README.md  REGRESSION_TEST_RESULTS.md  SDK_STRUCTURE.md
mn_payments/: __init__.py  hooks.py  modules.txt  patches.txt  pos_integration.py
mn_payments/api/: ebarimt.py  payment.py  qpay.py
mn_payments/config/: __init__.py
mn_payments/ebarimt/: __init__.py  api.py  client.py  sdk.py  tasks.py
mn_payments/integrations/: __init__.py
mn_payments/patches/: v1_0.py
mn_payments/qpay/: __init__.py  api.py  client.py  sdk.py  tasks.py  webhook.py
mn_payments/sdk/: README.md  __init__.py  ebarimt.py  qpay.py  test_ebarimt.py
mn_payments/tests/: __init__.py  run_tests.py  test_ebarimt_api.py  test_ebarimt_settings.py  (+10 more)
tests/: test_battle.py  test_console.py  test_erpnext_hrms_integration.py  test_error_recovery.py  test_final_comprehensive.py  test_lms_integration.py  test_performance_load.py  test_production_battle.py  test_security_validation.py  test_webshop_integration.py
(+37 files in other folders)
